# Rookie-engine

./: .gitignore  CMakeLists.txt  build.bat  build.sh
.github/workflows/: deploy-engine.yml  deploy.yml
src/: main.cpp
src/core/: attack_globals.cpp  engine.cpp  global_config.cpp  magics.cpp  opening_book.cpp  tt.cpp  zobrist.cpp
src/eval/: evaluate.cpp
src/include/: attack_globals.h  attack_tables.h  bitintrinsics.h  const.h  engine.h  eval_data.h  eval_globals.h  eval_utils.h  evaluate.h  global_config.h  legal_move.h  magic_utils.h  magics.h  move.h  move_counter.h  move_exec.h  move_gen.h  move_order.h  move_val.h  opening_book.h  perft.h  pst.h  search.h  state.h  threat_gen.h  tt.h  uci.h  uci_commands.h  undo.h  utils.h  zobrist.h
src/movegen/: move_exec.cpp  move_gen.cpp  move_val.cpp  threat_gen.cpp
src/search/: eval_globals.cpp  legal_move.cpp  move_order.cpp  search.cpp
src/tests/: perft.cpp
src/uci/: uci.cpp  uci_commands.cpp
src/util/: eval_utils.cpp  magic_utils.cpp  utils.cpp
